@@ -21,7 +21,7 @@ class DynamicViews(object):
     def getAvailableViewMethods(self):
         """Get a list of registered view method names
         """
-        return [view for view, name in self.getAvailableLayouts()]
+        return [view for view, _name in self.getAvailableLayouts()]
 
     def getDefaultViewMethod(self):
         """Get the default view method name
