@@ -4,7 +4,7 @@ __author__ = """European Environment Agency (EEA)"""
 __docformat__ = 'plaintext'
 __credits__ = """contributions: Alec Ghica"""
 
-from zope.interface import Interface, Attribute
+from zope.interface import Interface #, Attribute
 
 class IExhibitJsonConverter(Interface):
     """ Converts CSV to JSON
