@@ -7,12 +7,13 @@ __credits__ = """contributions: Alec Ghica, Alin Voinea"""
 # Subtypes
 from subtypes.interfaces import IPossibleExhibitJson
 from subtypes.interfaces import IExhibitJson
-
+IPossibleExhibitJson, IExhibitJson
 # Converter
 from converter.interfaces import IExhibitJsonConverter
-
+IExhibitJsonConverter
 # Accessors, mutators
 from app.interfaces import IDavizConfig
-
+IDavizConfig
 # Events
 from events.interfaces import IDavizEnabledEvent
+IDavizEnabledEvent
